--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React Native Joystick",
   "license": "MIT",
   "files": [
-    "lib"
+    "lib",
+    "src"
   ],
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
